--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     build:
       context: ./docker/postgres
     volumes:
-      - postgres_db:/var/lib/postgresql/data
+      - postgres_clockwork_db:/var/lib/postgresql/data
     environment:
       POSTGRES_DB: postgres
       POSTGRES_USER: postgres
@@ -12,4 +12,4 @@ services:
     ports:
       - 5432:5432
 volumes:
-  postgres_db:
+  postgres_clockwork_db:
