--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
+    "date-fns": "^3.6.0",
     "mem": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
