--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "mem": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
